[tool.poetry]
name = "action-test"
version = "0.1.0"
description = ""
authors = ["hemengyang <hmy0119@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
